update: update nha_phan_phoi, filter nha_phan_phoi, create hoa_don_nhap_kho
